# badpod

./: Cargo.toml  LICENSE-MIT  README.md  RELEASES.md
.github/workflows/: rust.yml
src/: basic.rs  bool.rs  itunes.rs  itunes_category.rs  language.rs  lib.rs  mime.rs  mimetype.rs  numbers.rs  parse.rs  parse_tree.rs  podcast.rs  rss.rs  strings.rs  test.rs  time.rs  utils.rs  xml.rs
src/itunes/: category.rs
src/podcast/: alternate_enclosure.rs  block.rs  chapters.rs  episode.rs  guid.rs  image.rs  license.rs  live_item.rs  location.rs  medium.rs  person.rs  social_interact.rs  transcript.rs  txt.rs  value.rs
tests/: tests.rs
tests/data/: podcast_namespace_example.xml  root_not_rss.xml  simple_feed.xml  strange_feed.xml  test_feed.xml
