[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["parsing"]
description = "A Rust crate for working with imperfect feeds of podcasts."
edition = "2021"
keywords = ["podcast", "rss", "xml"]
license = "MIT OR Apache-2.0"
name = "badpod"
readme = "README.md"
repository = "https://github.com/rssblue/badpod"
version = "0.8.1"

[dependencies]
chrono = "0.4.33"
regex = "1.10.3"
roxmltree = "0.19.0"
strum = "0.26.0"
strum_macros = "0.26.1"
time = { version = "0.3.34" }
url = "2.5.0"

[dev-dependencies]
log = "0.4.20"
pretty_assertions = "1.4.0"
reqwest = { version = "0.11.24", features = ["blocking"] }

[lib]
doctest = false
