[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["parsing"]
description = "A Rust crate for working with imperfect feeds of podcasts."
edition = "2021"
keywords = ["podcast", "rss", "xml"]
license = "MIT OR Apache-2.0"
name = "badpod"
readme = "README.md"
repository = "https://github.com/rssblue/badpod"
version = "0.8.3"

[dependencies]
chrono = "0.4.38"
regex = "1.10.4"
roxmltree = "0.19.0"
strum = "0.26.2"
strum_macros = "0.26.2"
time = { version = "0.3.36" }
url = "2.5.0"

[dev-dependencies]
log = "0.4.21"
pretty_assertions = "1.4.0"
reqwest = { version = "0.12.4", features = ["blocking"] }

[lib]
doctest = false
