[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["parsing"]
description = "A Rust crate for working with imperfect feeds of podcasts."
edition = "2021"
keywords = ["podcast", "rss", "xml"]
license = "MIT OR Apache-2.0"
name = "badpod"
readme = "README.md"
repository = "https://github.com/rssblue/badpod"
version = "0.9.1"

[dependencies]
chrono = "0.4.38"
regex = "1.10.5"
roxmltree = "0.20.0"
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.36" }
url = "2.5.2"

[dev-dependencies]
log = "0.4.22"
pretty_assertions = "1.4.0"
reqwest = { version = "0.12.5", features = ["blocking"] }

[lib]
doctest = false
